# inventilate

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Doxyfile  README.md  project_include.cmake
DICMApplication/: CMakeLists.txt
DICMApplication/app/: CMakeLists.txt  app_api.h  app_error_code.h  app_fan_motor_ctrl.c  app_fan_motor_ctrl.h  app_light_ctrl.h  app_onboard_hmi_ctrl.c  app_onboard_hmi_ctrl.h  app_power_ctrl_service.c  app_power_ctrl_service.h  app_voc_sensor.c  app_voc_sensor.h  eolpcba_invent.c  eolpcba_invent.h
DICMApplication/diff_press_sensor_service/: CMakeLists.txt
DICMApplication/diff_press_sensor_service/include/: connector_dp_sens_service.h
DICMApplication/diff_press_sensor_service/source/: connector_dp_sens_service.c
DICMApplication/eol/: CMakeLists.txt
DICMApplication/eol/include/: connector_eol_service.h
DICMApplication/eol/source/: connector_eol_service.c  connector_lin_comm_test.c  connector_lin_comm_test.h  connector_rvc_eol.c  connector_rvc_eol.h
DICMApplication/onboardhmi/: CMakeLists.txt
DICMApplication/onboardhmi/include/: connector_onboardhmi.h
DICMApplication/onboardhmi/source/: connector_onboardhmi.c
DICMApplication/pwm_fan_motor/: CMakeLists.txt
DICMApplication/pwm_fan_motor/include/: connector_pwm_fan_motor.h
DICMApplication/pwm_fan_motor/source/: connector_pwm_fan_motor.c
DICMApplication/pwr_ctrl_service/: CMakeLists.txt
DICMApplication/pwr_ctrl_service/include/: connector_pwr_ctrl_service.h
DICMApplication/pwr_ctrl_service/source/: connector_pwr_ctrl_service.c
DICMApplication/voc_sensor/: CMakeLists.txt
DICMApplication/voc_sensor/include/: connector_voc_sensor.h  connector_voc_sensor_api.h
DICMApplication/voc_sensor/source/: connector_voc_sensor.c
DICMFrameworkConfiguration/: CMakeLists.txt
DICMFrameworkConfiguration/app/: CMakeLists.txt  bsec_serialized_configurations_iaq.c  bsec_serialized_configurations_selectivity.c
DICMFrameworkConfiguration/configuration/: partitions.csv  project_components.cmake  project_specific.cmake  project_version.cmake  sdkconfig.defaults.project
DICMFrameworkConfiguration/include/: dicm_framework_config.h
DICMFrameworkConfiguration/source/: inventilate.c
DICMFrameworkConfiguration/source/app/: CMakeLists.txt
app/: CMakeLists.txt  app_api.h  app_error_code.h  app_fan_motor_ctrl.c  app_fan_motor_ctrl.h  app_light_ctrl.h  app_onboard_hmi_ctrl.c  app_onboard_hmi_ctrl.h  app_power_ctrl_service.c  app_power_ctrl_service.h  app_voc_sensor.c  app_voc_sensor.h  bsec_serialized_configurations_iaq.c  bsec_serialized_configurations_selectivity.c  bsec_serialized_configurations_selectivity.h  eolpcba_invent.c  eolpcba_invent.h
configuration/: CMakeLists.txt  inventilate_inv_3.c  local_inventilate_inv_3.h  sdkconfig.defaults.project
