cmake_minimum_required(VERSION 3.5)

add_compile_definitions(${EXTRA_COMPILER_DEFINITIONS})
add_compile_options(${EXTRA_COMPILER_OPTIONS})

if (CONFIG_CONNECTOR_DP_SENS_SERVICE)
add_compile_definitions(CONNECTOR_DP_SENS_SERVICE)
list (APPEND ConnectorLIBS DICMConnectorDiffPressSensService)
add_subdirectory(diff_press_sensor_service)
endif()

if (CONFIG_CONNECTOR_ONBOARD_HMI)
add_compile_definitions(CONNECTOR_ONBOARD_HMI)
list(APPEND ConnectorLIBS DICMConnectorOnboardHmi)
add_subdirectory(onboardhmi)
endif()
if (CONFIG_CONNECTOR_VOC_SENSOR)
add_compile_definitions(CONNECTOR_VOC_SENSOR)
list(APPEND ConnectorLIBS DICMConnectorVocSensor)
add_subdirectory(voc_sensor)
endif()
if (CONFIG_CONNECTOR_PWR_CTRL_SERVICE)
add_compile_definitions(CONNECTOR_POWER_CONTROL_SERVICE)
list(APPEND ConnectorLIBS DICMConnectorPwrCtrlService)
add_subdirectory(pwr_ctrl_service)
endif()
if (CONFIG_CONNECTOR_PWM_FAN_MOTOR)
add_compile_definitions(CONNECTOR_PWM_FAN_MOTOR)
list(APPEND ConnectorLIBS DICMConnectorPwmFanMotor)
add_subdirectory(pwm_fan_motor)
endif()
if (CONFIG_CONNECTOR_EOL_SERVICE)
add_compile_definitions(CONNECTOR_EOL_SERVICE)
list(APPEND ConnectorLIBS DICMConnectorEOLService)
add_subdirectory(eol)
endif()

list(APPEND ConnectorLIBS DICMConnectorApp)
add_subdirectory(app)

project(DICMApplication)

add_library(${PROJECT_NAME} INTERFACE)
target_link_libraries(${PROJECT_NAME} INTERFACE ${ConnectorLIBS})
